--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
+    "@kabisa/ui-components": "^0.1.9-0",
     "@mdx-js/react": "^1.6.22",
     "chalk": "^5.3.0",
     "clsx": "^1.2.1",
