--- a/website/package.json
+++ b/website/package.json
@@ -15,9 +15,10 @@
   },
   "dependencies": {
     "@docusaurus/core": "3.1.1",
+    "@docusaurus/plugin-ideal-image": "3.1.1",
     "@docusaurus/preset-classic": "3.1.1",
-    "@mdx-js/react": "^3.0.0",
     "@kabisa/ui-components": "^0.1.9-0",
+    "@mdx-js/react": "^3.0.0",
     "chalk": "^5.3.0",
     "clsx": "^1.2.1",
     "codemirror": "^6.0.1",
